--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mpvue-packager",
-  "version": "0.1.5",
+  "name": "web-packager",
+  "version": "0.2.1",
   "description": "mpvue 集成构建工具",
   "main": "bin/index.js",
   "bin": {
@@ -9,10 +9,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "F-loat",
+  "author": "zhongku",
   "license": "MIT",
   "dependencies": {
     "autoprefixer": "^7.1.0",
+    "node-notifier": "^5.3.0",
+    "node-sass": "^4.10.0",
+    "watchr": "^4.0.1",
+    "babel-eslint": "^8.2.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
+    "eslint": "^4.19.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-friendly-formatter": "^4.0.0",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.0",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-standard": "^3.0.0",
+    "happypack": "^5.0.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.0",
     "babel-plugin-transform-runtime": "^6.22.0",
@@ -28,6 +44,7 @@
     "file-loader": "^1.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^2.30.1",
+    "ip": "^1.1.5",
     "mpvue-entry": "^1.5.0",
     "mpvue-loader": "^1.1.2",
     "mpvue-webpack-target": "^1.0.0",
