--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-packager",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "mpvue 集成构建工具",
   "main": "bin/index.js",
   "bin": {
@@ -14,6 +14,10 @@
   "dependencies": {
     "autoprefixer": "^7.1.0",
     "node-notifier": "^5.3.0",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
+    "sass-loader": "^7.1.0",
+    "flyio": "^0.6.2",
     "node-sass": "^4.10.0",
     "watchr": "^4.0.1",
     "babel-eslint": "^8.2.0",
