--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-packager",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "mpvue 集成构建工具",
   "main": "bin/index.js",
   "bin": {
@@ -23,12 +23,14 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chalk": "^2.4.0",
+    "codecov": "^3.0.2",
     "commander": "^2.19.0",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.0",
     "cssnano": "^3.10.0",
     "eslint": "^4.19.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^4.0.0",
     "eslint-loader": "^2.0.0",
@@ -44,8 +46,10 @@
     "happypack": "^5.0.0",
     "html-webpack-plugin": "^2.30.1",
     "ip": "^1.1.5",
+    "istanbul": "^0.4.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
+    "mocha": "^5.1.1",
     "mpvue-loader": "^1.1.2",
     "mpvue-webpack-target": "^1.0.0",
     "node-notifier": "^5.3.0",
@@ -69,15 +73,12 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^4.1.0",
     "watchr": "^4.0.1",
+    "web-entry": "^1.6.0",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.13.0",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0",
-    "codecov": "^3.0.2",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.1.1",
     "webpack-mpvue-asset-plugin": "^0.1.0"
   },
   "engines": {
