--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-packager",
-  "version": "0.4.0",
+  "version": "0.4.2",
   "description": "mpvue 集成构建工具",
   "main": "bin/index.js",
   "bin": {
@@ -50,7 +50,6 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mocha": "^5.1.1",
-    "mpvue-entry": "^1.5.9",
     "mpvue-loader": "^1.1.2",
     "mpvue-webpack-target": "^1.0.0",
     "node-notifier": "^5.3.0",
@@ -74,6 +73,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^4.1.0",
     "watchr": "^4.0.1",
+    "web-entry": "^1.6.2",
     "webpack": "^3.11.0",
     "webpack-bundle-analyzer": "^2.13.0",
     "webpack-dev-middleware-hard-disk": "^1.12.0",
