--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-packager",
-  "version": "0.4.6",
+  "version": "0.4.8",
   "description": "mpvue 集成构建工具",
   "main": "bin/index.js",
   "bin": {
@@ -50,6 +50,7 @@
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mocha": "^5.1.1",
+    "mpvue-entry": "^1.5.9",
     "mpvue-loader": "^1.1.2",
     "mpvue-webpack-target": "^1.0.0",
     "node-notifier": "^5.3.0",
